Update IPUtil.java